# AutoCode

./: .dockerignore  .env  .env.example  .env.prod  .env.prod.example  .gitignore  CONTRIBUTING.md  DEEP_REVIEW.md  DEPLOYMENT.md  LAUNCH_CHECKLIST.md  LICENSE  PRODUCTION_READINESS.md  README.generated.md  README.md  app.js  docker-compose.prod.yml  docker-compose.yml  index.html  nl2web-pr-playbook.md  package-lock.json  package.json  pom.xml  stitch-mcp-server.mjs
None/: app.js  (+3 more)
python-agent/: .env.example  .gitignore  COVERAGE_CONFIGURATION.md  Dockerfile  TASK_33_1_IMPLEMENTATION_SUMMARY.md  TASK_34_2_IMPLEMENTATION_SUMMARY.md  demo_resource_optimization.py  main.py  pyproject.toml  requirements.txt  runner.py  runner_with_recovery.py
python-agent/None/: README.generated.md  app.js  index.html  styles.css
python-agent/agents/: base_agent.py  coder_agent.py  dialogue_manager.py  intent_agent.py  planner_agent.py  reviewer_agent.py  tester_agent.py
python-agent/client/: control_plane_client.py
python-agent/config/: __init__.py  cache_config.py  timeout_config.py
python-agent/configs/: doubao-seed-2.0-code-high-perf.json  mimo-v2.5-pro.json  mimo-v2.5.json
python-agent/docs/: ack-response-handling.md  task-3.2-event-delivery-enhancement.md
python-agent/examples/: ack_response_example.py  conduit_demo.py  conduit_tasks.json  e2e_fullstack_test.py  enhanced_cache_example.py  enhanced_event_delivery_example.py  recovery_service_demo.py
python-agent/generators/: FIX_LOOP_DOCUMENTATION.md  FIX_LOOP_INTEGRATION_EXAMPLE.md  FIX_LOOP_SUMMARY.md  VALIDATION_GATE_ENHANCEMENTS.md  __init__.py  backend_generator.py  django_generator.py  express_generator.py  fastapi_generator.py  fix_loop.py  fullstack_generator.py  stack_selector.py  test_generator.py  validation_gate.py
python-agent/llm/: README_ENHANCED_CACHE.md  __init__.py  cache_monitor.py  enhanced_cache_manager.py  enhanced_llm_client.py  llm_client.py
python-agent/memory/: knowledge_extractor.py  redis_memory.py
python-agent/orchestrator/: agent_orchestrator.py  dag_scheduler.py  distributed_lock.py  langgraph_runtime.py
python-agent/outbox/: README.md  RECOVERY_SERVICE.md  __init__.py  integration_example.py  recovery_service.py  redis_outbox.py
python-agent/plugins/: README.md  SECURITY.md  __init__.py  allowlist.json  approval_workflow.py  audit_trail.py  backend_pytest_tester_agent.manifest.json  backend_pytest_tester_agent.py  backend_template_generator_agent.manifest.json  backend_template_generator_agent.py  contracts.py  diff_risk_reviewer_agent.manifest.json  diff_risk_reviewer_agent.py  human_gate.py  loader.py  registry.py  resource_limits.py  runtime.py
(+795 files in other folders)
